2004-06-12  Per Bothner  <per@bothner.com>

	* Lexer.java (pushNesting, popNesting):  Moved from XQParser.
	* LineBufferedReader.java (readState, getReadState):
	Moved from gnu.mapping.InPort.

2004-06-07  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (maybeOutput):  Clear currentBlock if needed.

2004-05-28  Per Bothner  <per@bothner.com>

	* CompoundFormat.java (format):  Check for missing argument.
	* IntegerFormat.java (format):  Check for missing argument.

2004-05-22  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (currentBlock):  -1 now means none.
	(startLogicalBlock, endLogicalBlock):  Update accordinly.
	(endLogicalBlock):  Simplify and correct test.

	* PrettyWriter.java
	(QUEUED_OP_BLOCK_PREFIX): Renamed to QUEUED_OP_BLOCK_START_SUFFIX.
	Fix value of this and QUEUED_OP_BLOCK_START_SUFFIX to avoid conflict.
	(QUEUED_OP_BLOCK_START_SIZE):  Adjust accordingly.

	* PrettyWriter.java:  Improved commented-out debugging tools.

2004-03-08  Per Bothner  <per@bothner.com>

	* Text.java:  Implement Comparable, and Map.Entry, if JAVA2.
	(compareTo):   New method.

2003-11-20  Per Bothner  <per@bothner.com>

	* Lexer.java, SourceError.java, SourceMessages.java,
	SyntaxException.java:  Improved Javadoc comments.

2003-11-10  Per Bothner  <per@bothner.com>

	* IntegerFormat.java (MIN_DIGITS):  New flag.
	(format):  Handle new flag.

2003-10-20  Per Bothner  <per@bothner.com>

	* Options.java (valueOf):  Allow "on"/"off" for boolean options.

2003-10-19  Per Bothner  <per@bothner.com>

	* Options.java (valueTable, infoTable):  Only allocate when needed.
	(reset, getLocal, getBoolean(String, boolean), pushOptionValues,
	popOptionValues):  New methods.

2003-10-16  Per Bothner  <per@bothner.com>

	* Options.java:  New class.
	* Makefile.am:  Update accordingly.

2003-09-04  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (<init>):  Fix thinko in parameter name.

2003-05-10  Per Bothner  <per@bothner.com>
